--- a/src/FilePreview/styles.css
+++ b/src/FilePreview/styles.css
@@ -1,27 +1,26 @@
+.reactjs-file-preview-preview-file {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
-.preview-file {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
+/* .reactjs-file-preview-skeleton {
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  animation: reactjs-file-preview-skeleton-animation linear 1s infinite alternate;
+}
 
-  /* .skeleton{
-    width: 100%;
-    height: 100%;
-    opacity: 0.7;
-    animation: skeleton-animation linear 1s infinite alternate;
-  }
-
-  @keyframes skeleton-animation {
-   0%{
+@keyframes reactjs-file-preview-skeleton-animation {
+  0% {
     background-color: hsl(200, 20%, 70%);
-   }
-   100%{
+  }
+  100% {
     background-color: hsl(200, 20%, 90%);
-   }
-  } */
+  }
+} */
 
-.loader-container{
+.reactjs-file-preview-loader-container{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,25 +28,25 @@
   height: 100%;
 }
 
-.loader {
+.reactjs-file-preview-loader {
   width: 50px;
   height: 50px;
   border: 5px solid #e0e0e0;  /* Light gray background */
   border-top: 5px solid #606060;  /* Darker gray for the spinning effect */
   border-radius: 50%;
-  animation: spin 1s linear infinite;
+  animation: reactjs-file-preview-spin 1s linear infinite;
 }
 
-@keyframes spin {
+@keyframes reactjs-file-preview-spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
-.hidden {
+.reactjs-file-preview-hidden {
   visibility: hidden;
   width: 0;
   height: 0;
